feat(customer-search): add lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@customer-registration/customer-data-access": [
         "modules/data-access/customer/src/index.ts"
       ],
+      "@customer-registration/customer-search": [
+        "modules/feature/customer/search/src/index.ts"
+      ],
       "@customer-registration/layout": ["modules/feature/layout/src/index.ts"]
     }
   },
