--- a/project.json
+++ b/project.json
@@ -17,7 +17,10 @@
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": ["./src/styles.scss", "./node_modules/bootstrap/dist/css/bootstrap.min.css"],
+        "styles": [
+          "./src/styles.scss",
+          "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+        ],
         "scripts": []
       },
       "configurations": {
