chore: add module boundaries

--- a/modules/ui/customer/project.json
+++ b/modules/ui/customer/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "modules/ui/customer/src",
   "prefix": "customer-registration",
-  "tags": [],
+  "tags": ["type:ui"],
   "projectType": "library",
   "targets": {
     "test": {
